@@ -50,7 +50,6 @@ add:
 * https://code.google.com/p/wflz/
 * WSL: http://ssergeo.narod.ru/
 * http://mattmahoney.net/dc/bpe2v3.cpp
-* http://ctxmodel.net/files/LZP-DS_v0.rar
 * RLC: https://061c9e27-a-62cb3a1a-s-sites.googlegroups.com/site/bindeshyouneedme/RLC.zip?attachauth=ANoY7cqQOLgsVAXDyUMRJzdA-QTf-fzxScDfY2z1XFVdH1_Lz0KBIt3RdWj6XmEkeJqH7y0GdoppvDaJVK0mhufMhVc7vjRcXr1GGQv11iATd_zaA61JkdxlSaYs2yhaTvDFGy06V9t4qcpWKN9REqqkIwiiqWPcosks6Cis7rR4fe-t946C6JK5UzVdlfc2Q59Bo8DdB-nfl9TqWf_RUoQ-hQ6aYbgLqQ%3D%3D&attredirects=0
 * https://sites.google.com/site/compgt/lz77
 * http://mattmahoney.net/dc/lazy100.zip
