@@ -174,6 +174,7 @@ LZJB                                | Jeff Bonwick                              
 mmini - lzl                         | Adam Ierymenko                                   | 2010            | no       | https://code.google.com/p/mmini
 LZMAT                               | Vitaly Evseenko                                  | 1.1             | yes      | www.matcode.com/lzmat.htm
 LZO                                 | Markus Franz Xaver Johannes Oberhumer            | 2.06            | yes      | www.oberhumer.com/opensource/lzo
+LZP_ds                              | Dmitry Shkarin                                   | v0              | no       | http://www.ctxmodel.net/files/LZP-DS_v0.rar
 LZSS                                | Ilia Muraviev                                    | 2008-07-31      | no       | http://encode.ru/threads/143-LZSS-v0-01-is-here!
 LZSS                                | Nobuo Ito                                        | 1.0             | no       |
 LZV1                                | Hermann Vogt                                     | 0.5             | no       | http://encode.ru/threads/1661-LZWC-A-fast-tree-based-LZW-compressor
